...
                          : () async {
                              await Get.to(
                                () => EntryFormPage(receipt: item),
                                preventDuplicates: false,
                              );
                            },
                      child: const Text('Review transaction'),
                    ),
                    TextButton(
                      onPressed: () => showReceiptImage(context, item.path),
                      child: const Text('View receipt'),
                    ),
                  ],
...
